--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <p>// Who am I?</p>
         
         <div class="about-content">
-            <img src="supporting_file/James.Tanasyah.jpg" alt="James Jordan Tanasyah" class="about-image" loading="lazy">
+            <img src="James.Tanasyah.jpg" alt="James Jordan Tanasyah" class="about-image" loading="lazy">
             <div class="about-text">
                 <p>Hello, World! I'm James, a Computer Information Science senior at Washburn University, with hands-on experience in programming and software development. I'm passionate about building impactful tech solutions, and I'm currently focused on projects involving Android development, Web assembly, and Professional skills.</p>
                 <p>As a budding programmer with concentration in data scientist with a passion for turning complex data into actionable insights. With a strong foundation in computer science and specialized knowledge in data analysis, I thrive on solving real-world problems through data-driven approaches.</p>
