--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James | Curriculum Vitæ</title>
-
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <script src="main.js" defer></script>
-
 </head>
-
 <body>
     <div class="main-container">
         <!-- Left Panel -->
@@ -43,7 +38,6 @@
                 </div>
                 <button class="expand-btn" id="expandBtn">ⓘ</button>
             </div>
-
             <!-- Profile Details -->
             <div class="profile-content" id="profileContent">
                 <!-- Info -->
@@ -55,9 +49,7 @@
                     <span class="info-label">Age:</span>
                         <span id="ageDisplay">Calculating...</span>
                 </div>
-
                 <div class="line-divider"></div>
-
                 <!-- Achivement -->
                 <div class="achievement-card">
                     <div class="achievement-icon">
@@ -77,9 +69,7 @@
                         <p>Passionate, Self-discipline, Autodidact</p>
                     </div>
                 </div>
-
                 <div class="line-divider"></div>
-
                 <!-- Strength -->
                 <div class="skills-section">
                     <h3 class="skills-title">STRENGTHS</h3>
@@ -116,9 +106,7 @@
                         <span class="skill-tag">DevOps</span>
                     </div>
                 </div>
-
                 <div class="line-divider"></div>
-
                 <!-- Language -->
                 <div class="language-proficiency">
                     <div class="language-card">
@@ -146,14 +134,11 @@
                         <div class="diamond-levels" data-level="1"></div>
                     </div>
                 </div>
-
                 <div class="line-divider"></div>
-                
                 <h3 class="skills-title">SOURCE</h3>
-                <p>!TODO</p>
+                <p>To be Continue (TODO)</p>
             </div>
-
-            <!-- Secondary Content (Always visible unless profile is expanded) -->
+            <!-- Secondary Content -->
             <div class="secondary-content" id="secondaryContent">
                 <div class="scrollable-container">
                     <div class="scrollable-cards" id="scrollableCards">
