--- a/index.html
+++ b/index.html
@@ -258,42 +258,38 @@
                 </div>
             </div>
         </div>
-
         <!-- Left Panel Toggle -->
         <div class="left-toggle" id="leftToggle">
             <div class="left-toggle-dot"></div>
             <div class="left-toggle-dot"></div>
             <div class="left-toggle-dot"></div>
         </div>
-
         <!-- Middle Content -->
         <div class="middle-section" id="middleSection">
             <!-- Banner - Now twice as big -->
             <div class="banner">
-                <h2>JAMES DOE</h2>
-                <p>Senior Systems Engineer & Rust Developer</p>
+                <h2>GET TO KNOW ME!</h2>
+                <p>How I got into where I am?</p>
             </div>
-
             <!-- Stats Section -->
             <div class="stats">
                 <div class="stat-item">
-                    <div class="stat-number">10+</div>
+                    <div class="stat-number">7+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">143</div>
+                    <div class="stat-number">12+</div>
                     <div class="stat-label">Completed Projects</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">10+</div>
+                    <div class="stat-number">4+</div>
                     <div class="stat-label">Work Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">20+</div>
+                    <div class="stat-number">5+</div>
                     <div class="stat-label">Honors and Awards</div>
                 </div>
             </div>
-
             <!-- Projects Section -->
             <h2 class="section-title">PROJECTS</h2>
             <div class="projects-grid">
