--- a/index.html
+++ b/index.html
@@ -233,11 +233,13 @@
                         <div class="scroll-card">
                             <div class="text-block" style="font-size: 0.7em;">
                                 <h4 class="section-header">Prof. Nan Sun - Professional</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Washburn University — <i>Chair of CIS</i></span>
-                                    <span>nan.sun@washburn.edu</span>
-                                </div>
-                                <p style="margin-bottom: 0.5em;">(785) 670-2102</p>
+                                <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Chair of CIS</i></h4>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> nan.sun@washburn.edu
+                                </p>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> (785) 670-2102
+                                </p>
                             </div>
                             <h3 style="color: var(--accent); margin-bottom: 15px;">REFERENCES</h3>
                             <div style="margin-bottom: 15px;">
