--- a/index.html
+++ b/index.html
@@ -241,14 +241,45 @@
                                     <span style="position: absolute; left: 0;">•</span> (785) 670-2102
                                 </p>
                             </div>
-                            <h3 style="color: var(--accent); margin-bottom: 15px;">REFERENCES</h3>
-                            <div style="margin-bottom: 15px;">
-                                <h4>High-Performance DB</h4>
-                                <p>Built a distributed database in Rust</p>
+                            <div class="text-block" style="font-size: 0.7em;">
+                                <h4 class="section-header">Prof. Joseph Kendall-Morwick - Professional</h4>
+                                <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Asst. Prof. in CIS</i></h4>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> joseph.kendall-morwick@washburn.edu
+                                </p>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> (785) 670-1162
+                                </p>
                             </div>
-                            <div style="margin-bottom: 15px;">
-                                <h4>Kernel Module</h4>
-                                <p>Developed a filesystem driver for Linux</p>
+                            <div class="text-block" style="font-size: 0.7em;">
+                                <h4 class="section-header">Prof. George Frazier - Professional</h4>
+                                <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Asst. Prof. in CIS</i></h4>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> george.frazier@washburn.edu
+                                </p>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> (785) 670-1161
+                                </p>
+                            </div>
+                            <div class="text-block" style="font-size: 0.7em;">
+                                <h4 class="section-header">Prof. Akhadian Harnowo - Personal</h4>
+                                <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Assoc. Prof. of Prod. & Ops. Mgt. School of Business</i></h4>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> akhadian.harnowo@washburn.edu
+                                </p>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> (785) 670-1596
+                                </p>
+                            </div>
+                            <div class="text-block" style="font-size: 0.7em;">
+                                <h4 class="section-header">Heidi Staerkel - Personal</h4>
+                                <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Assoc. Dir. Int. Programs for Student Services</i></h4>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> heidi.staerkel@washburn.edu
+                                </p>
+                                <p style="margin-bottom: 0.5em; position: relative; padding-left: 1.2em;">
+                                    <span style="position: absolute; left: 0;">•</span> (785) 670-2087
+                                </p>
                             </div>
                         </div>
                     </div>
