--- a/index.html
+++ b/index.html
@@ -324,43 +324,115 @@
                 </div>
             </div>
             <!-- Projects Section -->
+                    <span class="cvevent-subtitle">Modeling with VBA/Excel</span>
+                    <span class="cvevent-date">Spring 2025</span>
+                </div>
+                <div class="cvevent-description">Fetching, processing, analyzing data with VBA.</div>
+            </div>
+            <div class="divider"></div>
+            <div class="cvevent">
+                <div class="cvevent-header">
+                    <span class="cvevent-title">Determining Handedness</span>
+                    <span class="cvevent-subtitle">Machine Learning and Artificial Intelligence</span>
+                    <span class="cvevent-date">Fall 2023 - Spring 2024</span>
+                </div>
+                <div class="cvevent-description">Developing a Convolutional Neural Network to classify.</div>
+            </div>
+            <div class="divider"></div>
+            <div class="cvevent">
+                <div class="cvevent-header">
+                    <span class="cvevent-title">Cuckoo Sandbox Malware Analysis</span>
+                    <span class="cvevent-subtitle">Cybersecurity</span>
+                    <span class="cvevent-date">Spring 2024</span>
+                </div>
+                <div class="cvevent-description">Analyzing malware with the purple team approach.</div>
+            </div>
+            <div class="divider"></div>
+            <div class="cvevent">
+                <div class="cvevent-header">
+                    <span class="cvevent-title">Movie Database</span>
+                    <span class="cvevent-subtitle">Database Management System</span>
+                    <span class="cvevent-date">Spring 2024</span>
+                </div>
+                <div class="cvevent-description">Structuring a PostgreSQL data storage and retrieval.</div>
+            </div>
+            <div class="divider"></div>
+            <div class="cvevent">
+                <div class="cvevent-header">
+                    <span class="cvevent-title">Intelligent Pathfinding Simulator</span>
+                    <span class="cvevent-subtitle">Introduction to Python</span>
+                    <span class="cvevent-date">Spring 2024</span>
+                </div>
+                <div class="cvevent-description">Developing a Graphical User Interface AI pathfinding algorithm.</div>
+            </div>
+
             <h2 class="section-title">PROJECTS</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>High-Performance DB</h3>
-                    <p>Distributed database system written in Rust with low-latency queries</p>
+                    <h3>HabitGuard</h3>
+                    <h4>Comp. Info. Sci. Capstone</h4>
+                    <h5>Spring 2025</h5>
+                    <p>Android mobile app for finance with habit analytics.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Linux Filesystem</h3>
-                    <p>Custom filesystem driver for Linux kernel with encryption support</p>
+                    <h3>Wearable UI/UX on Mental Health</h3>
+                    <h4>Comp. Info. Sci. Capstone</h4>
+                    <h5>Spring 2025</h5>
+                    <p>User-centered UI/UX design for mental health.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Network Protocol</h3>
-                    <p>High-speed networking protocol for distributed systems</p>
+                    <h3>Simulating Infectious Spread</h3>
+                    <h4>Modeling with VBA/Excel</h4>
+                    <h5>Spring 2025</h5>
+                    <p>Fetching, processing, analyzing data with VBA.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Compiler</h3>
-                    <p>LLVM-based compiler for custom programming language</p>
+                    <h3>Determining Handedness</h3>
+                    <h4>Machine Learning and Artificial Intelligence</h4>
+                    <h5>Fall 2023 - Spring 2024</h5>
+                    <p>Developing a Convolutional Neural Network to classify.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Embedded OS</h3>
-                    <p>Real-time operating system for IoT devices</p>
+                    <h3>Cuckoo Sandbox Malware Analysis</h3>
+                    <h4>Cybersecurity</h4>
+                    <h5>Spring 2024</h5>
+                    <p>Analyzing malware with the purple team approach.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Cluster Manager</h3>
-                    <p>Orchestration system for distributed computing</p>
+                    <h3>Movie Database</h3>
+                    <h4>Database Management System</h4>
+                    <h5>Spring 2024</h5>
+                    <p>Structuring a PostgreSQL data storage and retrieval.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Security Framework</h3>
-                    <p>Cryptographic libraries for secure communications</p>
+                    <h3>Intelligent Pathfinding Simulator</h3>
+                    <h4>Introduction to Python</h4>
+                    <h5>Spring 2024</h5>
+                    <p>Developing a Graphical User Interface AI pathfinding algorithm.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Performance Tools</h3>
-                    <p>Low-level profiling and optimization utilities</p>
+                    <h3>Data recovery</h3>
+                    <h4>Digital Forensic</h4>
+                    <h5>Spring 2024</h5>
+                    <p>Recovering deleted or corrupted data from windows, linux, macOS, and external storage.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Distributed Cache</h3>
-                    <p>In-memory caching system with consistency guarantees</p>
+                    <h3>GeoSports</h3>
+                    <h4>Software Engineering</h4>
+                    <h5>Fall 2023</h5>
+                    <p>Managing software with Web API functionality.</p>
+                </div>
+                <div class="project-card">
+                    <h3>TwisterOS Compatibility</h3>
+                    <h4>Operating Systems</h4>
+                    <h5>Spring 2023</h5>
+                    <p>Evaluating the architecture accross windows, linux, macOS, and SBC.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Smart Detection</h3>
+                    <h4>Object Oriented Programming</h4>
+                    <h5>Spring 2023</h5>
+                    <p>Prototyping for an automated control of smart devices.</p>
                 </div>
             </div>
         </div>
