Update the syntax

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="profile-content" id="profileContent">
                 <!-- Info -->
                 <div class="info-grid">
-                    <span class="info-label">Residence:</span>
+                    <span style="color: var(--accent);">Residence:</span>
                         <span>USA</span>
-                    <span class="info-label">City:</span>
+                    <span style="color: var(--accent);">City:</span>
                         <span>Topeka</span>
-                    <span class="info-label">Age:</span>
+                    <span style="color: var(--accent);">Age:</span>
                         <span id="ageDisplay">Calculating...</span>
                 </div>
                 <div class="line-divider"></div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="achievement-content">
                         <h3>Fantastic Achievement</h3>
-                        <p><span class="info-label">4.0 in CIS</span> & Cumulative 3.68 GPA</p>
+                        <p><span class="info-label">4.0 in CIS</span> & Cumulative 3.68 GPA, Active Extracullicular</p>
                     </div>
                 </div>
                 <div class="achievement-card">
