--- a/index.html
+++ b/index.html
@@ -392,6 +392,12 @@
                     <h5>Spring 2023</h5>
                     <p>Prototyping for an automated control of smart devices.</p>
                 </div>
+                <div class="project-card">
+                    <h3>Paper</h3>
+                    <h4>Other paper</h4>
+                    <h5>Fall 2021 - Spring 2025</h5>
+                    <p>Philosophy, Communication, English, Research, etc.</p>
+                </div>
             </div>
         </div>
 
