Update index and style files

--- a/index.html
+++ b/index.html
@@ -145,92 +145,99 @@
                         <div class="scroll-card">
                             <div class="text-block">
                                 <h4 class="section-header">Hello, World!</h4>
-                                <p>I'm James, a Computer Information Science senior at Washburn University, with hands-on experience in programming and software development. 
-                                    I'm passionate about building impactful tech solutions, and I'm currently focused on projects involving Android development, Web assembly, and Professional skills. As a budding programmer with concentration in data scientist with a passion for turning complex data into actionable insights. With a strong foundation in computer science and specialized knowledge in data analysis, I thrive on solving real-world problems through data-driven approaches.</p><br>
+                                <p style="font-family: Georgia, serif;">I'm James, a Computer Information Science senior at Washburn University, with hands-on experience in programming and software development. 
+                                    I'm passionate about building impactful tech solutions, and I'm currently focused on projects involving Android development, Web assembly, and Professional skills.<br><br>
+                                    As a budding programmer with concentration in data scientist with a passion for turning complex data into actionable insights. With a strong foundation in computer science and specialized knowledge in data analysis, I thrive on solving real-world problems through data-driven approaches.</p><br>
                             </div>
                             <div class="text-block">
-                                <h4 class="section-header">How it started</h4>
-                                <p>My journey in tech began when I wrote my first C# script to develop a game, and I've been hooked ever since. I believe in continuous learning and staying updated with the latest technologies in the fast-evolving field of data science. When I'm not coding, you can find me hiking, reading sci-fi novels, or consuming other form of information.</p>
+                                <h4 class="section-header">How it started...</h4>
+                                <p style="font-family: Georgia, serif;">My journey in tech began when I wrote my first C# script to develop a game, and I've been hooked ever since. I believe in continuous learning and staying updated with the latest technologies in the fast-evolving field of data science.</p><br>
+                            </div>
+                            <div class="text-block">
+                                <h4 class="section-header">What else...</h4>
+                                <p style="font-family: Georgia, serif;">When I'm not coding, you can find me traveling, gaming, tinkering, playing sports, reading sci-fi novels, or consuming other form of information.</p>
                             </div>
                         </div>
                         <div class="scroll-card">
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
+                                <h2 class="style=color: #b0b0b0;"><strong>EDUCATION</strong></h2><br>
                                 <h4 class="section-header">Washburn University</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Topeka, USA</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Topeka, USA</span>
                                         <span>Aug. 2023 - May 2026</span>
                                 </div>
-                                <h4 style="margin-bottom: 0.5em;">B.Sc. in Computer Information Science with Concentration in Data Science</h4>
-                                <p>Achieving 3.68 GPA. Extracullicular in BytesBods as Secretary, International Club, Campus Ministry, Leadership, Peer Educator.</p><br>
+                                <h4 style="margin-bottom: 0.5em; font-family: Georgia, serif; font-size: 0.8em;">B.Sc. in Computer Information Science with Concentration in Data Science</h4>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Achieving 3.68 GPA. Extracullicular in BytesBods as Secretary, International Club, Campus Ministry, Leadership, Peer Educator.</p>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header" style="color: darkolivegreen;">Allen Community College</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Online, USA</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Online, USA</span>
                                         <span>Aug. 2024 - Dec. 2024</span>
                                 </div>
-                                <h4>Credit Transfer</h4><br>
+                                <h4 style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Credit Transfer</h4>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header">Sampoerna University</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Jakarta, Indonesia</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Jakarta, Indonesia</span>
                                         <span>Aug. 2021 - May 2023</span>
                                 </div>
-                                <h4 style="margin-bottom: 0.5em;">B.Sc. in Computer Science</h4>
-                                <p>Achieving 3.7 GPA. Extracullicular in GDSC, Archery, Investor, Japanese Club.</p><br>
+                                <h4 style="margin-bottom: 0.5em; font-family: Georgia, serif; font-size: 0.8em;">B.Sc. in Computer Science</h4>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Achieving 3.7 GPA. Extracullicular in GDSC, Archery, Investor, Japanese Club.</p>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header" style="color: darkolivegreen;">Broward College</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Online, USA</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Online, USA</span>
                                         <span>Aug. 2022 - May. 2023</span>
                                 </div>
-                                <h4>Credit Transfer</h4><br>
+                                <h4 style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Credit Transfer</h4>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header" style="color: darkolivegreen;">The University of Arizona</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Online, USA</span>
+                                <div class="info-grid" style="font-size: .7em;;">
+                                    <span style="color: var(--accent);">Online, USA</span>
                                         <span>Aug. 2022 - May. 2023</span>
                                 </div>
-                                <h4>Credit Transfer</h4><br>
+                                <h4 style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Credit Transfer</h4>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header">Jakarta National Senior High School 2</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Jakarta, Indonesia</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Jakarta, Indonesia</span>
                                         <span>Aug. 2018 - May 2021</span>
                                 </div>
-                                <h4 style="margin-bottom: 0.5em;">Natural Science Concentration</h4>
-                                <p>Achieving 3.0 GPA. Extracullicular in KIR, OSN, FLS2N, German Club.</p><br>
+                                <h4 style="margin-bottom: 0.5em; font-family: Georgia, serif; font-size: 0.8em;">Natural Science Concentration</h4>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Achieving 3.0 GPA. Extracullicular in KIR, OSN, FLS2N, German Club.</p>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header">School of Bunda Mulia Middle School</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Jakarta, Indonesia</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Jakarta, Indonesia</span>
                                         <span>Aug. 2015 - May 2018</span>
                                 </div>
-                                <p>Achieving 3.0 GPA. Mandarin and English proficiency.</p><br>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Achieving 3.0 GPA. Mandarin and English proficiency.</p>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header">Tarsisius 1 Primary School</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Jakarta, Indonesia</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Jakarta, Indonesia</span>
                                         <span>Aug. 2010 - May 2015</span>
                                 </div>
-                                <p>Achieving 3.0 GPA. Robotic certification.</p><br>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">Achieving 3.0 GPA. Robotic certification.</p>
                             </div>
-                            <div class="text-block" style="font-size: 0.7em;">
+                            <div class="text-block">
                                 <h4 class="section-header">School of Bunda Mulia Primary School & KG</h4>
-                                <div class="info-grid" style="margin-bottom: 0.5em;">
-                                    <span class="info-label">Jakarta, Indonesia</span>
+                                <div class="info-grid" style="font-size: .7em;">
+                                    <span style="color: var(--accent);">Jakarta, Indonesia</span>
                                         <span>Aug. 2008 - May 2010</span>
                                 </div>
-                                <p>ComputerKID Learning Center</p>
+                                <p style="margin-bottom: 1em; font-family: Georgia, serif; font-size: 0.8em;">ComputerKID Learning Center</p>
                             </div>
                         </div>
                         <div class="scroll-card">
+                            <h2 class="style=color: #b0b0b0;"><strong>REFERENCES</strong></h2><br>
                             <div class="text-block" style="font-size: 0.7em;">
                                 <h4 class="section-header">Prof. Nan Sun - Professional</h4>
                                 <h4 style="margin-bottom: 0.5em;">Washburn University — <i>Chair of CIS</i></h4>
@@ -324,7 +331,7 @@
                 </div>
             </div>
             <!-- Projects Section -->
-            <h2 class="section-title">PROJECTS</h2>
+            <h2 class="stat-number" style="text-align: center;">PROJECTS</h2><br>
             <div class="projects-grid">
                 <div class="project-card">
                     <h3>HabitGuard</h3>
@@ -399,6 +406,7 @@
                     <p>Philosophy, Communication, English, Research, etc.</p>
                 </div>
             </div>
+            <h2 class="stat-number" style="text-align: center;">SERVICES</h2><br>
         </div>
 
         <!-- Right Panel - Now with properly rotated navigation -->
